--- a/bower.json
+++ b/bower.json
@@ -13,14 +13,9 @@
     "angular-material": "^0.11.4",
     "web3": "^0.15.0",
     "underscore": "~1.8.3",
-    "buffer": "~3.24.10",
-    "crypto-js": "~3.1.2",
     "qrcode": "git+https://github.com/lrsjng/jquery-qrcode.git",
-    "hooked-web3-provider": "git+https://github.com/ConsenSys/hooked-web3-provider.git",
     "marked": "git+https://github.com/chjj/marked.git",
-    "strftime": "~0.9.2",
-    "jquery": "~1.12.2",
-    "filesaver":"git+https://github.com/eligrey/FileSaver.js.git"
+    "jquery": "~1.12.2"
   },
   "devDependencies": {
     "angular-material": "~0.11.4"
